# matrix

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: matrix.hpp
test/: common.hpp  ctors_test.hpp  getters.hpp  methods.hpp  operators.hpp  test.cpp
